--- a/static/css/kuding.css
+++ b/static/css/kuding.css
@@ -110,7 +110,8 @@ ul.sc::-webkit-scrollbar-track { /*滚动条里面轨道*/
 
 /*导航点击样式*/
 .active {
-    background-color: #2aabd2;
+    background-color: #e3f4fb;
+    border-radius: 8px;
 }
 
 /*帮助信息相关样式*/
@@ -124,14 +125,14 @@ ul.sc::-webkit-scrollbar-track { /*滚动条里面轨道*/
 
 /*代码工具页相关*/
 .tool_div{
-    width: 1200px;
-    height: 800px;
-    margin-top: 100px;
+    /*position: absolute;*/
     /*top: 50%;*/
     /*left: 50%;*/
     /*transform: translate(-50%,-50%);*/
+    width: 1200px;
+    height: 800px;
+    margin-top: 100px;
 }
-
 .tool_div div{
     background: transparent;
     height: 250px;
@@ -141,7 +142,6 @@ ul.sc::-webkit-scrollbar-track { /*滚动条里面轨道*/
     border: crimson 2px solid;
     border-radius: 10px;
 }
-
 body{
     width: 100%;
     height: 100%;
@@ -156,4 +156,19 @@ body{
     height: 250px;
     border: crimson 2px solid;
     border-radius: 10px;
+}
+
+.spn {
+    position: absolute;
+    left: -60px;
+    height: 60px;
+    width: 60px;
+    top: 100px;
+    background-color: cyan;
+    color: #c12e2a;
+    text-align: center;
+    border-radius: 30px;
+    line-height: 20px;
+    font-size: 15px;
+    padding: 10px
 }
