--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
                      </a>
                  </li>
                  <li>
-                     <a href="/student/">
+                     <a href="/teacher/">
                          <p><svg class="icon" style="font-size: 35px" aria-hidden="true">
                                   <use xlink:href="#icon-kecheng"></use>
                             </svg>
