--- a/static/css/s_mycss.css
+++ b/static/css/s_mycss.css
@@ -16,7 +16,7 @@ a{
 .left_menu{
     margin-top: 15px;
     margin-right: 15px;
-    width: 200px;
+    width: 250px;
     height: 700px;
     background-color: rgb(255,255,255);
     border-radius: 15px;
@@ -53,11 +53,11 @@ a{
     width: 100px;
     height: 100px;
     border-radius: 30px;
-    margin-left: 50px;
+    margin-left: 75px;
     margin-top: 50px;
 }
 .left_menu p{
-    margin: 15px 0;
+    margin: 20px 30px;
 }
 .name{
     margin-left: 40px;
@@ -84,11 +84,14 @@ a{
     border-radius: 15px;
 }
 .teacher_info{
-    width: 390px;
+    width: 800px;
     height: 300px;
-    margin-left: 20px;
+    /*margin-left: 20px;*/
     background-color: rgb(255,255,255);
+    /* 阴影 */
+    box-shadow: 0 0 50px gray;
     border-radius: 15px;
+    overflow: auto;
 }
 .teacher_info p{
     color: #b92c28;
@@ -129,8 +132,8 @@ a{
     letter-spacing: 15px;
     color: white;
     background-color: rgb(24,172,243);
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
 }
 .leftmenu{
     width: 200px;
@@ -174,7 +177,7 @@ a{
 
 .per_info p{
     margin-top: 15px;
-    font-size: 20px;
+    font-size: 16px;
     margin-left: 20px;
 
 }
@@ -182,4 +185,28 @@ a{
     font-size: 16px;
     padding: 10px;
     margin-left: 30px;
+}
+.per_info p span{
+    display: inline-block;
+    width: 95px;
+    text-align: center;
+    margin-left: 20px;
+}
+.per_info p input{
+    display: inline-block;
+    /*width: 200px;*/
+    text-align: center;
+    margin-left: 30px;
+}
+.per_info #save{
+    margin-left: 145px;
+}
+.pwd_man p span{
+    display: inline-block;
+    width: 95px;
+    text-align: center;
+    margin-left: 30px;
+}
+.pwd_man #confirm_pwd{
+    margin-left: 125px;
 }
