--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,9 @@
 {% block title %}
     个人主页
 {% endblock %}
+{% block css %}
+    <link rel="stylesheet" href="/static/css/m_style.css">
+{% endblock %}
 
 {% block content %}
     {% if role == "student" %}
@@ -23,7 +26,7 @@
                     <p>
                         <span style=" margin-left: 10px;font-size: 12px">最近登陆：2018-09-06 14：24</span>
                     </p>
-                    <p style="width: 60px;height: 60px;margin-left: 55px">
+                    <p style="width: 60px;height: 60px;margin-left: 100px">
                         <i class="fa fa-question-circle fa-4x" style="color: rgb(219,153,246)" aria-hidden="true"></i>
                     </p>
 
@@ -40,43 +43,60 @@
                     </div>
                 </div>
                 <div class="home1 left">
-                    <div class="tagrt left">
-                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true"> 目标</i>
-                    </div>
+{#                    <div class="tagrt left">#}
+{#                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true"> 目标</i>#}
+{#                    </div>#}
                     <div class="teacher_info left">
-                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true">
-                            班主任信息</i>
-                        {% for t_info in t_info_obj %}
-                            <p>
-                                手机号：{{ t_info.t_account }}
-                            </p>
-                            <p>
-                                姓名：{{ t_info.t_name }}
-                            </p>
-                            <p>
-                                {% if t_info.t_sex == 1 %}
-                                    性别：男
-                                {% else %}
-                                    性别：女
-                                {% endif %}
-                            </p>
-                            <p>
-                                年龄：{{ t_info.t_age }}
-                            </p>
-                            <p>
-                                学历：{{ t_info.t_degree }}
-                            </p>
-                        {% endfor %}
+                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px ;font-size: 20px" aria-hidden="true">
+                            教师信息</i>
+                    <table class="table table-hover table-bordered">
+                            <thead>
+                            <tr>
+                                <th class="success">姓名</th>
+                                <th class="info">手机号</th>
+                                <th class="warning">性别</th>
+                                <th class="info">年龄</th>
+                                <th class="danger">学历</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for t_info in t_info_obj %}
+                                <tr>
+                                    <td class="success">
+                                        {{ t_info.t_name }}
+                                    </td>
+                                    <td class="info">
+                                        {{ t_info.t_account }}
+                                    </td>
+                                    <td class="warning">
+                                        {% if t_info.t_sex == 1 %}
+                                            男
+                                        {% else %}
+                                            女
+                                        {% endif %}
+                                    </td>
+                                    <td class="info">
+                                        {{ t_info.t_age }}
+                                    </td>
+                                    <td class="danger">
+                                        {{ t_info.t_degree }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                     <div style="clear: both"></div>
                     <div class="course_info">
-                        <i class="fa fa-book fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true">课程信息</i>
+                        <i class="fa fa-book fa-2x" style="color: skyblue; margin: 5px; font-size: 20px" aria-hidden="true">课程信息</i>
+
                         <table class="table table-hover table-bordered">
                             <thead>
                             <tr>
                                 <th class="success">课程名称</th>
                                 <th class="info">课程时长</th>
                                 <th class="danger">课程详情</th>
+                                <th class="warning">课程创造时间</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -89,7 +109,15 @@
                                         {{ course.d_time_length }}
                                     </td>
                                     <td class="danger">
-                                        {{ course.d_detail }}
+                                        {% if course.d_detail == None %}
+                                            暂无简介
+                                            {% else %}
+                                             {{ course.d_detail }}
+                                        {% endif %}
+                                    </td>
+                                    {% load str_time %}
+                                    <td class="warning">
+                                        {{ course.d_create_time|strf_time }}
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -97,26 +125,14 @@
                         </table>
                     </div>
                 </div>
-                <div class="right_menu left">
-                    <div class="server1">
-                        <div class="right_info">
-                            在线客服
-                        </div>
-                        <p style="margin-top: 20px">
-                            <img src="/static/img/online_phone.jpg" alt="">
-                        </p>
-                        <p>
-                            <button class="btn btn-danger" style="margin-left: 50px"> 在线客服</button>
-                        </p>
-                    </div>
-                    <div class="server2">
-                        <div class="right_info">
-                            微信客服
-                        </div>
-                        <img style="width: 170px;margin: 10px 15px 0;" src="/static/img/ercode.jpg" alt="">
-                        <span style="margin-left: 15px">微信关注我们了解更多</span>
-                    </div>
+                <!-- 代码部分begin -->
+                <div class="toolbar">
+                   <a href="javascript:;" class="toolbar-item toolbar-item-weixin"><span class="toolbar-layer"></span></a>
+                   <a href="javascript:;" class="toolbar-item toolbar-item-feedback"></a>
+                   <a href="javascript:;" class="toolbar-item toolbar-item-app"><span class="toolbar-layer"></span></a>
+                   <a href="javascript:scroll(0,0)" id="top" class="toolbar-item toolbar-item-top"></a>
                 </div>
+                <!-- 代码部分end -->
                 <div style="clear: both"></div>
             </div>
         </div>
@@ -159,40 +175,56 @@
                     </div>
                 </div>
                 <div class="home1 left">
-                    <div class="tagrt left">
-                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true"> 目标</i>
-                    </div>
+{#                    <div class="tagrt left">#}
+{#                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true"> 目标</i>#}
+{#                    </div>#}
                     <div class="teacher_info left">
-                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true">
+                        <i class="fa fa-id-card-o fa-2x" style="color: skyblue; margin: 5px; font-size: 20px" aria-hidden="true">
                             学生信息</i>
-                        {% for s_info in s_info_list %}
-                            <p>
-                                手机号：{{ s_info.s_account }}
-                            </p>
-                            <p>
-                                姓名：{{ s_info.s_name }}
-                            </p>
-                            <p>
-                                {% if s_info.s_sex == 1 %}
-                                    性别：男
-                                {% else %}
-                                    性别：女
-                                {% endif %}
-                            </p>
-                            <p>
-                                年龄：{{ s_info.s_age }}
-                            </p>
-                        {% endfor %}
+
+                            <table class="table table-hover table-bordered">
+                            <thead>
+                            <tr>
+                                <th class="success">学生姓名</th>
+                                <th class="info">手机号</th>
+                                <th class="warning">性别</th>
+                                <th class="danger">学生年级</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for s_info in s_info_list %}
+                                <tr>
+                                    <td class="success">
+                                        {{ s_info.s_name }}
+                                    </td>
+                                    <td class="info">
+                                        {{ s_info.s_account }}
+                                    </td>
+                                    <td class="warning">
+                                        {% if s_info.s_sex == 1 %}
+                                            男
+                                        {% else %}
+                                            女
+                                        {% endif %}
+                                    </td>
+                                    <td class="danger">
+                                        {{ s_info.s_grade }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                     <div style="clear: both"></div>
                     <div class="course_info">
-                        <i class="fa fa-book fa-2x" style="color: skyblue; margin: 5px" aria-hidden="true">课程信息</i>
+                        <i class="fa fa-book fa-2x" style="color: skyblue; margin: 5px;font-size: 20px" aria-hidden="true">课程信息</i>
                         <table class="table table-hover table-bordered">
                             <thead>
                             <tr>
                                 <th class="success">课程名称</th>
                                 <th class="info">课程时长</th>
                                 <th class="danger">课程详情</th>
+                                <th class="warning">课程创造时间</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -205,8 +237,17 @@
                                         {{ course.d_time_length }}
                                     </td>
                                     <td class="danger">
-                                        {{ course.d_detail }}
+                                        {% if course.d_detail == None %}
+                                            暂无简介
+                                            {% else %}
+                                             {{ course.d_detail }}
+                                        {% endif %}
                                     </td>
+                                    {% load str_time %}
+                                    <td class="warning">
+                                        {{ course.d_create_time|strf_time }}
+                                    </td>
+
                                 </tr>
                             {% endfor %}
                             </tbody>
