--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <script type="javascript" src="/static/plug/bootstrap/js/bootstrap.js"></script>
 </head>
 <style type="text/css">
- 
+
 </style>
 <body>
     <div class="toph">
@@ -27,18 +27,17 @@
                 <form class="form-inline" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label class="sr-only" for="exampleInputEmail3">账号: </label>
-                        <input type="email" autofocus class="form-control" id="exampleInputEmail3" placeholder="请输入手机号或账号登陆">
+                        <label class="sr-only" >账号: </label>
+                        <input type="text" name="user" autofocus class="form-control"  placeholder="请输入手机号或账号登陆">
                         <p >这里是提示信息</p>
                     </div>
                     <div class="form-group">
-                        <label class="sr-only" for="exampleInputPassword3">密码: </label>
-                        <input type="password"  class="form-control" id="exampleInputPassword3" placeholder="请输入密码">
+                        <label class="sr-only" >密码: </label>
+                        <input type="password"  name="pwd" class="form-control"  placeholder="请输入密码">
                         <p >这里是提示信息</p>
 
                     </div>
-                    <input type="text" placeholder="验证码" class="form-control" style=" margin-top: 15px;width: 150px;height: 38px;margin-left: 30px;">
-                   <span> <img src="images/yan.jpg" ></span>
+
                     <div  style="overflow: hidden;padding:15px 30px;">
                         <div style="float: left;">
                              <label>
@@ -49,16 +48,7 @@
                             <a href="#" style="text-decoration: none;color: #333333;line-height: 2;">忘记密码</a>
                         </div>
                     </div>
-                    <div style="margin: 0px 30px 15px;">
-                        您的身份：
-                        <input type="radio" id="student" name="identy">
-                        <label for="student">学生</label>
-                        <input type="radio" id="parents" name="identy">
-                        <label for="parents">家长</label>
-                        <input type="radio" name="identy" id="teacher">
-                        <label for="teacher">老师</label>
-                        <span style="color: red;display: none;">&nbsp;身份？</span>
-                    </div>
+
                     <button type="submit" class="btn btn-primary btn-lg" style="width: 290px;height: 40px;margin-left: 30px;">立即登陆</button>
                     <div style="margin-right: 30px;float: right;margin-top: 10px;">
                         <a href="/reg/">立即注册</a>
