--- a/templates/notice.html
+++ b/templates/notice.html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="container-fluid" style="background-color: #eef3fa;">
     <div class="row">
-        <div class="col-md-2" style="padding-left: 0;padding-right: 0;width: 20%">
+        <div class="col-md-2 col-xs-2" style="padding-left: 0;padding-right: 0;width: 20%">
             <div class="bord"
                  style="box-shadow: 0 0 30px 8px rgba(222,239,252,.9);margin: 15px;padding-left: 0;padding-right: 0;height: 680px;background-color: #ffffff">
                 <ul style="padding-left: 0">
@@ -19,7 +19,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-md-8" style="padding-left: 0;padding-right: 0;width: 60%">
+        <div class="col-md-8 col-xs-2" style="padding-left: 0;padding-right: 0;width: 60%">
             <div class="bord"
                  style="background: #ffffff;box-shadow: 0 0 30px 8px rgba(222,239,252,.9);margin: 20px;padding-left: 0;padding-right: 0;height: 680px">
                 <div style="padding-right: 40px;padding-top: 40px">
@@ -49,7 +49,7 @@
             </div>
 
         </div>
-        <div class="col-md-2" style="padding-left: 0;padding-right: 0;width:20%">
+        <div class="col-md-2 col-xs-2" style="padding-left: 0;padding-right: 0;width:20%">
             <div class="bord"
                  style="box-shadow: 0 0 30px 8px rgba(222,239,252,.9);margin: 15px;padding-left: 0;padding-right: 0;height: 680px;background-color: #ffffff">
                 <ul style="padding-left: 0">
